  - IDatabase::fieldExists -> IMaintainableDatabase::fieldExists
  - IDatabase::indexExists -> IMaintainableDatabase::indexExists
  - IDatabase::tableExists -> IMaintainableDatabase::tableExists
* DBConnRef doesn't accept live connection in constructor anymore.
  Only parameters for getting connection should be provided.
* IDatabase::getTopologyRootPrimary() was removed.
* …

=== Deprecations in 1.39 ===
* PageProps::getInstance(), deprecated since 1.38, emits deprecations warnings.
* The global function wfGetDB() has been deprecated. Use
  LoadBalancer::getConnection() instead.
* SpecialRedirectWithAction::__construct without SearchEngineFactory argument
  is hard deprecated.
* Use of the SiteStatsUpdate constructor has been deprecated in favor of
  the ::factory() method.
* AuthManager::checkAccountCreatePermissions has been deprecated. Use
  AuthManager::authorizeCreateAccount or AuthManager::probablyCanCreateAccount
  instead.
* Title::getSelectFields() has been deprecated in favor of
  PageStore::newSelectQueryBuilder()
* Title::newFromTitleValue(), deprecated since in 1.34, now emits deprecation
  warnings. Use ::newFromLinkTarget() instead.
* ExtensionRegistry::readFromQueue() has been marked @internal. Extensions
  should use ExtensionProcessor instead.
* Processor::getExtraAutoloaderPaths() and
  ExtensionProcessor::getExtraAutoloaderPaths() have been deprecated, use get
  getExtractedAutoloadInfo() instead.
* The following global functions are deprecated in favor of the listed UrlUtils
  methods.
  - wfExpandUrl -> UrlUtils::expand
  - wfGetServerUrl -> UrlUtils::getServer
  - wfAssembleUrl -> UrlUtils::assemble
  - wfRemoveDotSegments -> UrlUtils::removeDotSegments
  - wfUrlProtocols -> UrlUtils::validProtocols
  - wfUrlProtocolsWithoutProtRel -> UrlUtils::validAbsoluteProtocols
  - wfParseUrl -> UrlUtils::parse
  - wfExpandIRI -> UrlUtils::expandIRI
  - wfMatchesDomainList -> UrlUtils::matchesDomainList
  These methods are exact replacements except that