@@ -1548,18 +1548,6 @@ class User implements Authority, UserIdentity, UserEmailContact {
 	}
 
 	/**
-	 * If user is blocked, return the name of the user who placed the block
-	 * @return string Name of blocker
-	 * @deprecated since 1.38
-	 * Hard deprecated since 1.38.
-	 */
-	public function blockedBy() {
-		wfDeprecated( __METHOD__, '1.38' );
-		$this->getBlockedStatus();
-		return $this->mBlockedby;
-	}
-
-	/**
 	 * If user is blocked, return the specified reason for the block.
 	 *
 	 * @deprecated since 1.35 Use AbstractBlock::getReasonComment instead
@@ -1570,19 +1558,6 @@ class User implements Authority, UserIdentity, UserEmailContact {
 		wfDeprecated( __METHOD__, '1.35' );
 		$this->getBlockedStatus();
 		return $this->mBlockreason;
-	}
-
-	/**
-	 * If user is blocked, return the ID for the block
-	 * @return int|false
-	 * @deprecated since 1.38
-	 * Hard deprecated since 1.38.
-	 */
-	public function getBlockId() {
-		wfDeprecated( __METHOD__, '1.38' );
-		$this->getBlockedStatus();
-		// @phan-suppress-next-line PhanTypeMismatchReturnNullable getId does not return null here
-		return ( $this->mBlock ? $this->mBlock->getId() : false );
 	}
 
 	/**
